# Katla

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  run_output.txt
katla_app/: cargo.toml
katla_app/examples/: ecs_demo.rs
katla_app/src/: input.rs  lib.rs  main.rs
katla_app/src/application/: builder.rs  mod.rs  model.rs  scene.rs
katla_app/src/cameracontroller/: fpscontrol.rs  mod.rs  orbitcontrols.rs
katla_app/src/components/: active.rs  drag.rs  drawable.rs  input.rs  mod.rs  (+7 more)
katla_derive/: Cargo.toml
katla_derive/src/: lib.rs
katla_ecs/: Cargo.toml
katla_ecs/src/: components.rs  entity.rs  lib.rs  storage.rs  system.rs  test_file.rs  world.rs
katla_math/: Cargo.toml
katla_math/src/: aabb.rs  lib.rs  mat4.rs  quat.rs  sphere.rs  transform.rs  vec3.rs  vec4.rs
katla_math/tests/: aabb.rs  lib.rs  maths.rs  quat.rs  sphere.rs  transform.rs
katla_vulkan/: Cargo.toml
katla_vulkan/src/: lib.rs
katla_vulkan/src/vulkan/: commandbuffer.rs  commandpool.rs  context.rs  mod.rs  pipeline.rs  queue.rs  renderpass.rs  swapchain.rs  swapdata.rs  texture.rs  vertexbinding.rs  vertexbuffer.rs
katla_vulkan/src/vulkan/pipeline/: builder.rs  materialbuilder.rs  mod.rs  shadermodule.rs
resources/models/: Box.gltf  FoxBlender.glb  FoxFixed.glb  Regular_plane.glb
resources/shaders/: gui.frag  gui.frag.spv  gui.vert  gui.vert.spv  model.frag  model.frag.spv  model.vert  model.wgsl  model_no_tex.frag  model_no_tex.frag.spv  model_norm.vert  model_norm.vert.spv  model_pbr.vert  model_pbr.vert.spv  model_pos.vert  model_pos.vert.spv
src/: gui.rs  input.rs  inputcontroller.rs  lib.rs  main.rs  vulkanostuff.rs  vulkanstuff.rs
src/application/: mod.rs  model.rs  scene.rs
src/cameracontroller/: mod.rs
src/gl/: mod.rs
src/input/: map.rs
src/renderer/: mod.rs  old_stuff.rs
src/rendering/: drawable.rs  material.rs  mesh.rs  meshbuffer.rs  mod.rs  pipeline.rs  shaders.rs  shared_resources.rs  texture.rs  vertexbuffer.rs  vertextypes.rs
src/util/: cache.rs  mod.rs  modelcache.rs  timer.rs
src/vulkanstuff/: context.rs  pipeline.rs  swapdata.rs  texture.rs  vertexbuffer.rs
(+28 files in other folders)
