[package]
name = "katla"
version = "0.1.0"
authors = ["Mik-pe <mikael.pettersson201@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
  "katla_math",
]

[dependencies]
katla_math = {path = "katla_math"}
byteorder = "1.3"
winit = "0.24.0"
ash = "^0.33.0"
ash-window = "^0.7.0"
gpu-allocator = "0.9.0"
image = "0.23.11"
itertools = "0.9.0"
env_logger = "0.9.0"
# imgui = "^0.3.0"
# imgui-winit-support = "^0.3.0"

[dependencies.gltf]
features = ["KHR_materials_pbrSpecularGlossiness"]
version = "0.15"
