[package]
name = "katla"
version = "0.1.0"
authors = ["Mik-pe <mikael.pettersson201@gmail.com>"]
edition = "2021"

[workspace]
members = ["katla_math", "katla_vulkan"]

[dependencies]
katla_math = { path = "katla_math" }
katla_vulkan = { path = "katla_vulkan" }
byteorder = "1.3"
winit = "^0.26"
image = "0.23.11"
itertools = "0.13.0"
env_logger = "0.9.0"
gltf = { version = "^1.3", features = ["KHR_materials_pbrSpecularGlossiness"] }
