[package]
name = "katla_vulkan"
version = "0.1.0"
authors = ["Mik-pe <mikael.pettersson201@gmail.com>"]
edition = "2018"

[dependencies]
raw-window-handle = "*"
ash = "^0.38.0"
ash-window = "^0.13.0"
gpu-allocator = "^0.28.0"
naga = {version = "28.0.0", features = ["wgsl-in", "spv-out"]}
bytemuck = "*"
